# cmake

base_t1/: CMakeLists.txt
base_t1/src/: CMakeLists.txt
findCURL_t6/: CMakeLists.txt
findCURL_t6/src/: CMakeLists.txt  main.c
findHello_t7/: CMakeLists.txt
findHello_t7/cmake/: Findhello.cmake
findHello_t7/src/: CMakeLists.txt  main.c
how_to_use_lib_t5/: CMakeLists.txt  COPYRIGHT
how_to_use_lib_t5/doc/: CMakeLists.txt
how_to_use_lib_t5/src/: CMakeLists.txt  main.c
install_t3/: CMakeLists.txt  README  runhello.sh
install_t3/src/: CMakeLists.txt
out_of_source_t2/: CMakeLists.txt
out_of_source_t2/src/: CMakeLists.txt  main.c
share_static_lib_t4/: CMakeLists.txt
share_static_lib_t4/doc/: hello.txt
share_static_lib_t4/lib/: CMakeLists.txt  hello.c  hello.h
