PROJECT(HELLO)
MESSAGE(STATUS "This is BINARY DIR " ${PROJECT_BINARY_DIR})
MESSAGE(STATUS "This is SOURCE DIR " ${PROJECT_SOURCE_DIR})

ADD_SUBDIRECTORY(src bin)
MESSAGE(STATUS "This is exec PATH " ${EXECUTABLE_OUTPUT_PATH})
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
MESSAGE(STATUS "This is OUTPUT PATH " ${EXECUTABLE_OUTPUT_PATH})
